infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: holistic-interview
  labels:
    name: holistic-interview
